gitops/apps/base/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      nodeSelector:
        kubernetes.io/hostname: server
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          ports:
            - containerPort: 80
