gitops/apps/base/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ingress
  annotations:
    cert-manager.io/cluster-issuer: local-homelab-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: wallabag.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  number: 80
  tls:
    - hosts:
        - wallabag.home
      secretName: wallabag-tls-cert
